--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
-
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.url=jdbc:mariadb://localhost:3306/productmanagementproject?createDatabaseIfNotExist=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB103Dialect
+spring.jpa.hibernate.ddl-auto = create-drop
+logging.level.org.hibernate.SQL=INFO
+logging.level.com.student.ordermanagementproject= INFO
+logging.level.org.hibernate.type=INFO
+management.endpoints.web.exposure.include='*'
+server.port=8080
+server.error.include-stacktrace=always
+server.error.include-message=always
+server.error.include-exception=true
