--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/productmanagementproject?cre
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB103Dialect
 spring.jpa.hibernate.ddl-auto = create-drop
 logging.level.org.hibernate.SQL=INFO
-logging.level.com.student.ordermanagementproject= INFO
+logging.level.com.student.productmanagementproject= INFO
 logging.level.org.hibernate.type=INFO
 management.endpoints.web.exposure.include='*'
 server.port=8080
