--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,7 +4,7 @@ spring:
     driver-class-name: org.mariadb.jdbc.Driver
     username: root
     password: root
-    url: jdbc:mariadb://localhost:3306/JVmanagementproject?createDatabaseIfNotExist=true
+    url: jdbc:mariadb://localhost:3306/jvmanagement?createDatabaseIfNotExist=true
   jpa:
     properties:
       hibernate:
@@ -13,7 +13,7 @@ spring:
       ddl-auto: create-drop
 
 server:
-  port: 8181
+  port: 8080
   error:
     include-stacktrace: always
     include-message: always
